# elito-de.sigma-chemnitz

./: .gitignore  .gitignore.sample  Makefile.in  README.org  bg-bitbake.in  bitbake.in  configure.ac  set-env.in.in  setup  task-project.bb.sample
00-base.fedora/: Dockerfile
00-base.fedora/profile.d/: proxy.sh
00-base.ubuntu/: Dockerfile
01-ssh/: Dockerfile  authorized_keys
classes/: arnoldboot.bbclass  elito-develcomp.bbclass  elito-final.bbclass  elito-metrics.bbclass  elito-shared-group.bbclass  elito-specialperms.bbclass  elito-test.bbclass  elito.bbclass  gitdevel.bbclass  ubi.bbclass  vdr-plugin.bbclass
conf/: bblayers.conf.in.in  layer.conf  layer.conf.in  local.conf.in.in  project-layer.conf  project.conf  project.conf.sample
conf/distro/: elito.conf
conf/distro/include/: elito-deps.inc  elito-oldpkg.inc  elito-patches.inc  elito-revs.inc
conf/machine/: atom-ion-32.conf  cortex-m3.conf  kk-trizeps4.conf  kk-trizeps6.conf  omap-beagle.conf  phytec-pcm027.conf  phytec-pcm034.conf  phytec-pcm037.conf  phytec-pcm043.conf  toradex-colibri270.conf  toradex-colibri320.conf  x86-nehalem-64.conf
contrib/: bitbake.elito.conf  cvs  git-tunnel  maintainer.mk  metrics.xml  mx28-write  svn-config  svn-servers  svn-tunnel
contrib/docker/: README.org  config  setup
contrib/docker/00-base.fedora/: Dockerfile
contrib/docker/00-base.ubuntu/: Dockerfile
contrib/docker/01-ssh/: Dockerfile  ssh_config  (+1 more)
doc/manual/: .gitignore  10-requirements.tex  20-quickstart.tex  21-setup.tex  22-project-customization.tex  50-SDK.tex  A0-logs.tex  B0-bootloaders.tex  C0-dirtrees.tex  D0-references.tex  Makefile  elito-make.txt  elito-setup.txt  hyperref.cfg  main.tex  mx28-rescue.txt  sdk-install.txt  version.tex.in
files/: device_table-minimal.txt
files/acpid/: amend.inc
files/base-passwd/: elito-passwd.patch
files/bootchart-lite/: elito.patch
files/busybox/: amend.inc  busybox-mbus-env.patch  cvt-color.patch  defconfig  elito-directory.patch  ifup-upstart.patch  mdev.conf
files/eglibc/: amend.inc
files/freetype/: amend.inc  bytecode-interpreter.patch
files/hal/: nov4l1.patch
files/ipkg-utils/: license.patch
files/opkg/: license-info.patch
files/python-2.7.1/: amend.inc
meta-backports/classes/: test.bbclass
meta-backports/conf/: layer.conf
meta-fixup/conf/: layer.conf
meta/classes/: arnoldboot.bbclass  barebox-environment-2.bbclass  elito-common.bbclass  elito-copytree.bbclass  elito-develcomp.bbclass  elito-dtree-base.bbclass  elito-emit-buildvars.bbclass  elito-image.bbclass  elito-kconfig.bbclass  elito-kernel-dtree.bbclass  elito-machdata.bbclass  elito-makefile-component.bbclass  elito-metrics.bbclass  elito-mx6-load.bbclass  elito-nfsroot.bbclass  elito-normalize-po.bbclass  elito-rebuild.bbclass  elito-specialperms.bbclass  elito-test.bbclass  elito-utils.bbclass  elito.bbclass  gcc-binutils.bbclass  gitdevel.bbclass  rm_old_work.bbclass  ubi.bbclass  vdr-plugin.bbclass
meta/conf/: layer.conf
meta/files/: device_table-minimal.txt
mk/: _develcomp.mk  _kernel.mk  autotools.mk  barebox.mk  common_mx28.mk  common_mx6.mk  devel.mk  eclipse.mk  image-stream.mk  image-stream_kk-ipan4.mk  image-stream_kk-trizeps6.mk  image-stream_mx28.mk  image-stream_mx6.mk  imx-bootlets.mk  kernel.mk  kernel_boot-arnoldboot.mk  kernel_boot-bzimage.mk  kernel_boot-ceboot.mk  kernel_boot-uboot.mk  kernel_boot-uimage.mk  kernel_boot-zimage.mk  nfs-opt.mk  nfsd.mk  pkg.mk  u-boot.mk  vdr.mk
recipes/acl/: acl.bb
recipes/arnoldboot/: arnoldboot-native.bb  arnoldboot-native_git.bb
recipes/attr/: attr.bb
recipes/bitbake/: .gitignore  0001-install.patch  0002-env.patch  0003-trace.patch  0004-svn-tunnel.patch  0005-proxy-env.patch  0006-weak-rdeps.patch  0007-find-dups.patch  0007-task-rusage.patch  0008-bbclassextend.patch  gen-tarball
recipes/can-test/: can-test_git.bb
recipes/ce-bootme/: ce-bootme.bb
recipes/dietlibc/: arm-elfinfo.patch  dietlibc-cross.bb  dietlibc.inc  dietlibc_git.bb
recipes/elito-base-files/: elito-base-files.bb  elito-mdev-conf.bb  hosts  sysctl.conf
recipes/elito-develcomp/: elito-develcomp.bb
recipes/elito-fbtest/: elito-fbtest.bb
recipes/elito-filesystem/: elito-filesystem.bb
recipes/elito-netbase/: elito-netbase.bb
recipes/elito-release/: elito-release.bb
recipes/elito-setup-tools/: elito-setup-tools.bb  mdev.dbg
recipes/helloworld/: helloworld.bb.sample
recipes/image/: elito-bootstrap-image.bb  elito-image.bb  elito-prep.bb
recipes/imlib2/: imlib2-x11.bb  imlib2.inc
recipes/kernel/: elito-kernel.inc  elito-kernel_2.6.bb  kernel-ubibootstrap.bb  linux-libc-headers.bb
recipes/kernel-firmware/: kernel-firmware.bb
recipes/mcelog/: mcelog_1.0.bb  mcelog_git.bb
recipes/mobm320/: mobm320-common.inc  mobm320-native.bb  mobm320.bb  mobm320.inc  mobm320_git.bb
recipes/modutils-initscripts/: modutils-initscripts-upstart.bb
recipes/mtd-utils/: mtd-utils-native.bb  mtd-utils.bb  mtd-utils.inc
recipes/ncurses/: ncurses_5.7.bb
recipes/pxaregs/: pxaregs.bb
recipes/strace/: strace.bb
recipes/task/: elito-task-boot.bb  elito-task-core.bb
recipes/tre/: tre.bb
recipes/u-boot/: u-boot-common.inc  u-boot-mkimage.bb  u-boot.bb
recipes/udev/: udev.bb
recipes/upstart/: libnih-native_1.0.bb  libnih.bb  libnih.inc  libnih_1.0.bb  upstart-native.inc  upstart-native_0.6.bb  upstart.inc  upstart_0.6.bb
recipes/upstart-setup/: upstart-setup.bb  upstart-setup.inc  upstart-setup_git.bb
recipes/uvccapture/: uvccapture.bb
recipes/xine-ui/: xine-ui.bb
recipes/xorg-driver/: xf86-video-nouveau_git.bb
samples/: Makefile  files-project.bb  network-interfaces  securetty  task-project.bb
scripts/: apply-update-pack  checkout-bb.sh  common.mk  convert-metrics  create-sources-tar  create-ubi-conf  exec-cgroup  generate-pseudo-env  generate-update-pack  git-post-commit  gitlab-ci.mk  make-err-pseudo.help  make-redir  make.help  run-pseudo  statvfs  top-level.mk  ubi-gen  wrap-bitbake
scripts/buildvars/: _generic_.mk
setup/: .gitignore  Makefile  README  elito-proxy.tmpl  elito-setup.skel  functions  setup
(+688 files in other folders)
